--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,11 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+*.bsp
 
 ### Eclipse ###
 .apt_generated
@@ -23,9 +18,6 @@ out/
 .settings
 .springBeans
 .sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
 ### NetBeans ###
 /nbproject/private/
@@ -42,6 +34,3 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
-### Scala ###
-.bsp/
